--- a/typerwritercss/index.html
+++ b/typerwritercss/index.html
@@ -6,8 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>グリット</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
+    <script>
+    window.addEventListener("DOMContentLoaded", () => {
+    VANTA.FOG({
+     el: "#vanta",
+        mouseControls: true,
+        touchControls: true,
+        gyroControls: false,
+        minHeight: 200.00,
+        minWidth: 200.00,
+        highlightColor: 0xfcdbcb,
+        midtoneColor: 0xff974b,
+        lowlightColor: 0x37130e,
+        baseColor: 0xfae9d8,
+        blurFactor: 0.5,
+        speed: 6.00,
+        zoom: 2.40
+    }) 
+}) 
+    </script>
 </head>
 <body>
+    <div id="vanta"></div>
     <main>
         <section class="title">
             <div>
@@ -32,7 +54,7 @@
             </div>
         </section>
         <section2>
-
+            <div type="box" id="boxy"></div>
         </section2>
     </main>
 </body>
