--- a/typerwritercss/index.html
+++ b/typerwritercss/index.html
@@ -32,30 +32,31 @@ window.addEventListener("DOMContentLoaded", () => {
     <div id="vanta"></div>
     <main>
         <section class="title">
-            <div>
-                <h1 id="grit">
-                    [グリット]
-                </h1>
-            </div>
-            <div id="group">
-                <p id="desc1">
-                Lorem ipsum dolor sit amet, consectetur
-                </p>
-                <p id="desc2">
-                adipiscing elit, sed do eiusmod tempor incididunt
-                </p>
-                <p id="desc3">
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                </p>
-                <p id="desc4">
-                    <br/>
-                quis nostrud exercitation ullamco laboris nisi.
-                </p>
+            <div class="wrapper">
+                <div>
+                    <h1 id="grit">
+                        [グリット]
+                    </h1>
+                </div>
+                <div class="typewriter">
+                    <div id="group">
+                        <p id="desc1">
+                        Lorem ipsum dolor sit amet, consectetur
+                        </p>
+                        <p id="desc2">
+                        adipiscing elit, sed do eiusmod tempor incididunt
+                        </p>
+                        <p id="desc3">
+                        ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        </p>
+                        <p id="desc4">
+                            <br/>
+                        quis nostrud exercitation ullamco laboris nisi.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
-        <section2>
-            <div type="box" id="boxy"></div>
-        </section2>
     </main>
 </body>
 </html>
