dont overthink it

--- a/typerwritercss/index.html
+++ b/typerwritercss/index.html
@@ -42,17 +42,20 @@ window.addEventListener("DOMContentLoaded", () => {
                     <div class="typewriter">
                         <div id="group">
                             <p id="desc1">
-                            Lorem ipsum dolor sit amet, consectetur
+                            If you overthink a design too much 
                             </p>
                             <p id="desc2">
-                            adipiscing elit, sed do eiusmod tempor incididunt
+                            you end up potentially sacrificing a simple yet
                             </p>
                             <p id="desc3">
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            satisfying experience and its' unique visual language,
                             </p>
                             <p id="desc4">
                                 <br/>
-                            quis nostrud exercitation ullamco laboris nisi.
+                            don't overthink it.
+                            </p>
+                            <p id="desc5">
+                                <3
                             </p>
                         </div>
                     </div>
